2001-11-02  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/util/DBProperties.java (Repository): Remove dbspec
	arg when reading a query file. The default dbspec is obtained from
	the query file itself. Add methods for interpreting queries
	relative to an arbitrary database.

2001-10-31  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/core/component/ComponentFactory.java (Repository):
	Merge from V8_6_0
	Remove the test for the parameter of a component being a
	Collection. It makes no difference what its type is; always, just
	store the parameter, whatever it is. 

	* org/cougaar/core/society/DBInitializerServiceProvider.java (Repository):
	Merge from V8_6_0
	Remove superfluous query definitions.

	* org/cougaar/domain/planning/plugin/AssetDataDBReader.java (Repository):
	Merge from V8_6_0
	Use default start and end times for time-phased relationships if
	either start or end is bogus (e.g. null).

2001-10-19  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/core/society/DBInitializerServiceProvider.java (Repository):
	Add query time logging. The time for every query is written to a
	file. Disabled by default. Log file creation must be uncommented
	to use.

2001-10-19  Todd Wright  <twright@bbn.com>

	* org/cougaar/core/society/Node.java, ExternalNodeControl*
	Removed the AppServer's "external-controller" registration 
        with the Node.  A future refactoring will replace the 
        removed code with a cleaner design.
        This removes the dependency of server upon core, and in the 
        future core will depend upon server.

2001-10-18  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/util/DBProperties.java (Repository):
	Add create from URL method so that resources can be used in
	addition to config path files.

2001-10-11  Ray Tomlinson  <RTomlinson@HEFEWEIZEN>

	* org/cougaar/util/DBProperties.java (Repository):
	Detect missing queries. Never return a null from getQuery. Throw